conformance/tests/backendtlspolicy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-host-mismatch-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-host-mismatch
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-cert-mismatch-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-cert-mismatch
  - backendRefs:
    - group: ""
      kind: Service
      name: backendtlspolicy-reconcile-test
      port: 443
    matches:
    - path:
        type: Exact
        value: /backendtlspolicy-reconcile-test

---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-host-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-cert-mismatch-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    appProtocol: HTTPS
    port: 443
    targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: backendtlspolicy-reconcile-test
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend
  ports:
  - name: "btls"
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: normative-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: host-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-host-mismatch-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains the CA certificate used to sign the tls-backend serving certificate.
      name: "tls-checks-ca-certificate"
    hostname: "mismatch.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: cert-mismatch
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-cert-mismatch-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This ConfigMap is generated dynamically by the test suite.
      # It contains a random, unused CA certificate to force validation to fail.
      name: "mismatch-ca-certificate"
    hostname: "abc.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: reconcile-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "backendtlspolicy-reconcile-test"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      # This will point to a test-specific ConfigMap
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
